# fromager

./: .coderabbit.yaml  .containerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .markdownlint.yaml  .mdformat.toml  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Containerfile  Containerfile.e2e  Containerfile.e2e-bootstrap  Containerfile.e2e-one-wheel  LICENSE  README.md  SECURITY.md  analyze.sh  build-order.json  build-wheels.sh  build_wheel.sh  clean_podman.sh  common.sh  extract-build-requires.py  extract-requires.py  hatch.toml  hatchling-build-order.json  install-from-mirror.sh  jailed-server.sh  langchain-deptree.txt  langchain-freeze.txt  mirror-sdists.sh  mirror.sh  parse_dep.py  pyproject.toml  (+12 more)
.claude/commands/: pre-rebuild-check.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: benchmark-backfill.yml  benchmarks-integration.yml  benchmarks-nightly.yml  benchmarks.yml  check.yaml  codeql.yaml  python-publish.yaml  scorecard.yaml  test.yaml
benchmarks/: README.md  conftest.py  pytest.ini  test_integration.py  test_resolution.py
benchmarks/fixtures/: __init__.py  metrics.py  pypi_server.py  uv_shim.py
benchmarks/requirements/: packages.txt
benchmarks/scripts/: extract_deps.py
container-dependencies/: build-order-everything-cuda.json
container-dependencies/deepspeed/: build-order-cuda.json  requirements.txt
container-dependencies/instructlab/: build-order-cpu.json  build-order-cuda.json  requirements.txt
container-dependencies/vllm/: build-order-cuda.json  requirements.txt
cuda/: Containerfile.cuda-ubi9  README.md  bootstrap_cuda.sh  build_cuda.sh
docs/: cli.rst  conf.py  config-reference.rst  customization.md  develop.md  files.md  getting-started.rst  glossary.md  glossary.rst  hooks.rst  how-to.md  howtos.md  http-retry.md  index.rst  quickstart.rst  requirements.txt  spelling_wordlist.txt  using.md
docs/concepts/: architecture-overview.rst  bootstrap-vs-build.rst  bootstrapper-architecture.rst  dependencies.rst  hooks-and-overrides.rst  index.rst  package-settings.rst  resolver-architecture.rst
docs/example/: Containerfile  bootstrap.sh  git-submodules-example.yaml  requirements-git-example.txt  requirements.txt  skip-constraints-example.md
docs/how-tos/: authentication.md  bootstrap-constraints.rst  build-from-git-repo.rst  build-web-server.rst  containers.rst  dependency-build-tags.rst  index.rst  multiple-version-bootstrap.rst  multiple-versions.rst  parallel.rst  pre-release-versions.rst  pypi-cooldown.rst  pyproject-overrides.rst  release-age-cooldown.rst  repeatable-builds.rst  version-specific-prebuilt.rst
docs/pkgs/: torch.md
docs/proposals/: background-tasks.md  build-isolation.md  deprecate-req-url.md  filter-env.md  global-build-system-dependencies-hook.md  index.rst  iterative-bootstrap.rst  multiple-cache-wheel-servers.md  new-patcher-config.md  (+9 more)
e2e/: bootstrap_constraint.txt  bootstrap_extras.txt  build-parallel-graph.json  build_settings.yaml  changelog_settings.yaml  ci_bootstrap_parallel_suite.sh  ci_bootstrap_suite.sh  ci_build_suite.sh  ci_config_suite.sh  ci_specialized_suite.sh  ci_suite_framework.sh  ci_workflow_suite.sh  common.sh  constraints.txt  container_build.sh  container_exec.sh  graph-with-dependency-conflict.json  mergify_lint.py  run_all.sh  setup_coverage.py  test_bootstrap.sh  test_bootstrap_all_versions.sh  test_bootstrap_build_tags.sh  test_bootstrap_cache.sh  test_bootstrap_conflicting_requirements.sh  test_bootstrap_constraint.sh  test_bootstrap_constraints.sh  test_bootstrap_cooldown.sh  test_bootstrap_cooldown_constraint_conflict.sh  test_bootstrap_cooldown_github.sh  test_bootstrap_cooldown_gitlab.sh  test_bootstrap_cooldown_override.sh  test_bootstrap_cooldown_prebuilt.sh  test_bootstrap_cooldown_transitive.sh  test_bootstrap_extras.sh  test_bootstrap_git_url.sh  test_bootstrap_git_url_tag.sh  test_bootstrap_max_release_age.sh  test_bootstrap_multiple_versions.sh  test_bootstrap_multiple_versions_resolve_error.sh  (+40 more)
e2e/flit_core_override/: pyproject.toml
e2e/flit_core_override/src/package_plugins/: flit_core.py
e2e/github_override_example/: pyproject.toml
e2e/github_override_example/mock_api/: serve.py  tags.json
e2e/github_override_example/src/package_plugins/: stevedore_github.py
e2e/gitlab_override_example/: pyproject.toml
e2e/gitlab_override_example/src/package_plugins/: python_gitlab.py
hack/: run_markdownlint.sh
mirror_builder/: __main__.py  bootstrap.py  context.py  dependencies.py  external_commands.py  finders.py  jobs.py  overrides.py  pkgdb.py  resolve_and_download.py  resolver.py  rpms.py  sdist.py  server.py  sources.py  wheels.py
overrides/: settings.yaml
package_plugins/: pyarrow.py  torch.py
patches/: clarifai-10.2.1-fix-sdist.patch  meson_python-0.15.0.patch  ninja-1.11.1.1-wrap-system-ninja.patch  numpy-1.26.4.patch  pytorch-v2.2.2-002-dist-info-no-run-build-deps.patch
pipelines/: bootstrap.sh  onboard_sdist.sh  update_tools.sh
scripts/: conditional_hook.py  pre-commit  setup-pre-commit-hook.sh
tests/: conftest.py  test_bootstrap.py  test_bootstrap_requirement_resolver.py  test_bootstrap_requirement_resolver_multiple.py  test_bootstrap_test_mode.py  test_bootstrapper.py  test_bootstrapper_iterative.py  test_build_environment.py  test_cache.py  test_cli.py  test_cli_build.py  test_commands.py  test_commands_graph.py  test_constraints.py  test_context.py  test_cooldown.py  test_dependencies.py  test_dependency_graph.py  test_downloads.py  test_entrypoints.py  test_external_commands.py  test_find_updates.py  test_finders.py  test_gitutils.py  test_graph.py  test_graph_check.py  test_graph_commands.py  test_graph_validate.py  test_hooks.py  test_http_retry.py  test_lint_requirements.py  test_list_overrides.py  test_list_versions.py  test_local_version.py  test_main.py  test_metrics.py  test_minimize.py  test_overrides.py  test_packagesettings.py  test_packagesettings_resolver.py  (+27 more)
(+216 files in other folders)
