[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fromager"
authors = [
    { name = "Mark McLoughlin", email = "markmc@redhat.com" },
    { name = "Doug Hellmann", email = "dhellmann@redhat.com" },
]
description = "Wheel maker"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

requires-python = ">=3.11"

dependencies = [
    "click>=8.1.7",
    "elfdeps>=0.2.0",
    "html5lib",
    "packaging",
    "pkginfo",
    "psutil",
    "pydantic",
    "pyproject_hooks>=1.0.0,!=1.1.0",
    "PyYAML",
    "rich",
    "requests",
    "resolvelib",
    "requests-mock",
    "stevedore",
    "tomlkit",
    "tqdm",
    "virtualenv",
    "wheel",
]

[project.optional-dependencies]
build = [
    "build",
    "twine",
]
coverage = [
    "coverage[toml]>=4.0,!=4.4",
]
mypy = [
    "mypy",
    "pytest",
    "types-html5lib",
    "types-psutil",
    "types-PyYAML",
    "types-requests",
    "types-toml",
    "types-tqdm",
]
test = [
    "coverage[toml]!=4.4,>=4.0",
    "pytest",
    "requests-mock",
    "twine>=6.1.0",
    "hatchling",
    "hatch-vcs",
]
docs = [
    "sphinx",
    "sphinx-click",
    "myst-parser",
    "sphinx-rtd-theme",
    "autodoc-pydantic",
]

[project.urls]
Repository = "https://github.com/python-wheel-build/fromager"
Documentation = "https://fromager.readthedocs.io/en/latest/"

[project.scripts]
fromager = "fromager.__main__:invoke_main"

[project.entry-points."fromager.override_methods"]
# override methods and their default implementations
get_build_system_dependencies = "fromager.dependencies:default_get_build_system_dependencies"
get_build_backend_dependencies = "fromager.dependencies:default_get_build_backend_dependencies"
get_build_sdist_dependencies = "fromager.dependencies:default_get_build_sdist_dependencies"
resolver_provider = "fromager.resolver:default_resolver_provider"
download_source = "fromager.sources:default_download_source"
resolve_source = "fromager.sources:default_resolve_source"
build_sdist = "fromager.sources:default_build_sdist"
build_wheel = "fromager.wheels:default_build_wheel"

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["fromager", "tests/"]

[tool.coverage.paths]
source = ["src/fromager", ".tox/**/site-packages/fromager"]
tests = ["tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "@typing.overload",
    "if typing.TYPE_CHECKING",
]

[tool.hatch.version]
path = "src/fromager/version.py"
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fromager"]

[tool.ruff]
target-version = "py311"
# same as black's default line length
line-length = 88
exclude = [
    "src/fromager/version.py", # file is generated dynamically, out of our control
]

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # pyflakes
    "Q",   # flake8-quotes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",   # Line too long
    "RUF005", # Consider iterable unpacking instead of concatenation
    "TID252", # Prefer absolute imports over relative imports from parent modules
    "UP015",  # Unnecessary open mode parameters
]

[tool.ruff.lint.isort]
known-first-party = ["fromager"]

[tool.mypy]
mypy_path = ["src"]
# TODO: tighten type checks
# check_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
# warn_return_any = true

# TODO: remove excludes and silent follow
follow_imports = "silent"
exclude = [
    "^src/fromager/sources\\.py$",
    "^src/fromager/sdist\\.py$",
    "^src/fromager/commands/build\\.py$",
    "^src/fromager/settings\\.py$",
]

[[tool.mypy.overrides]]
# packages without typing annotations and stubs
module = ["pyproject_hooks", "requests_mock", "resolver", "stevedore"]
ignore_missing_imports = true

[tool.basedpyright]
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false
reportUntypedFunctionDecorator = false
reportUnknownMemberType = false
reportUnusedParameter = false
reportAny = false
reportImplicitOverride = false
reportAttributeAccessIssue = false  # adding our own private property on click commands
